--- a/Bak/index.html
+++ b/Bak/index.html
@@ -74,8 +74,7 @@
 			<h1>Bored?</h1>
 					
 			<p id="doit-wrapper">
-				<a id="doit" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://erkie.github.com/asteroids.min.js';void(0);" title="Kick ass">Kick ass</a>
-				<a id="app-store" href="http://itunes.apple.com/us/app/kick-ass-destroy-the-web/id436623109?mt=8"><img src="appstore.png" alt="Available for iPhone, iPod touch and iPad" /></a>
+				<a id="doit" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://arduinoboy.github.com/asteroids.min.js';void(0);" title="Jsteriods">Jsteroids</a>
 			</p>
 			
 			<script type="text/javascript">
@@ -88,13 +87,12 @@
 				}
 			</script>
 			
-			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://erkie.github.com/asteroids.min.js';void(0);">Drag this bookmarklet to your bookmarks bar or a tab and start having some fun on other pages too!</a></p>
+			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://arduinoboy.github.com/asteroids.min.js';void(0);">Drag this bookmarklet to your bookmarks bar or a tab and start having some fun on other pages too!</a></p>
 			
 			<!--[if IE]>
 			<p class="ie-version">Right click the green button and choose "Add to favorites" (yes, it's safe).</p>
 			<![endif]-->
 			
-			<iframe id="fb-box" src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FKick-Ass-Destroy-the-web%2F168200253236727&amp;width=292&amp;colorscheme=light&amp;show_faces=false&amp;stream=false&amp;header=false&amp;height=62" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:330px; height:70px;" allowTransparency="true"></iframe>
 			
 			<p style="clear:both"><strong>Tip:</strong> It works great for vaporizing annoying ads. Try it out!</p>
 			
@@ -142,7 +140,17 @@
 			</style>
 			<![endif]-->
 			
-			<h2>About me</h2>
+			<h3>Wanna help?</h3>
+			
+			<p>Please check the source at <a href="http://github.com/arduinoboy/arduinoboy.github.com">github.com//arduinoboy/arduinoboy.github.com</a>.</p>
+
+			<p>This is a modified version of erkie's that has NO swearing!</p>
+			
+			<p>Well, there might be but then just point me to where that is(Using the isuses)</p>
+
+			
+
+			<h2>About me(Original)</h2>
 			
 			<p>My name is <a href="http://erikrothoff.com/">Erik Rothoff Andersson</a>. I am 18 years of age and currently live in Sweden.</p>
 			
