--- a/bak2/index.html
+++ b/bak2/index.html
@@ -54,6 +54,18 @@
 				top: 10px;
 				right: 10px;
 			}
+			
+			#doit-wrapper {
+				position: relative;
+			}
+			
+			#app-store {
+				position: absolute;
+				right: -70px;
+				bottom: 0px;
+			}
+			
+			a img { border: none; }
 		</style>
 	</head>
 
@@ -61,12 +73,22 @@
 		<div id="wrapper">
 			<h1>Bored?</h1>
 					
-			<p><a id="doit" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='./asteroids.js';void(0);" title="Kick ass">Kick ass</a>
+			<p id="doit-wrapper">
+				<a id="doit" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://erkie.github.com/asteroids.min.js';void(0);" title="Kick ass">Kick ass</a>
+				<a id="app-store" href="http://itunes.apple.com/us/app/kick-ass-destroy-the-web/id436623109?mt=8"><img src="appstore.png" alt="Available for iPhone, iPod touch and iPad" /></a>
 			</p>
 			
 			<script type="text/javascript">
 				// "PG" version
+				/*
 				if ( document.location.search.indexOf('pg') != -1 ) {
+					var doit = document.getElementById('doit');
+					doit.title = 'Webstroyer';
+					doit.innerHTML = 'Webstroyer';
+					doit.style.backgroundImage = 'url(button-pg.png)';
+				}
+				*/
+				if ( 1 = 1 ) {
 					var doit = document.getElementById('doit');
 					doit.title = 'Webstroyer';
 					doit.innerHTML = 'Webstroyer';
@@ -74,14 +96,16 @@
 				}
 			</script>
 			
-			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='./asteroids.js';void(0);">Drag this bookmarklet to your bookmarks bar or a tab and start having some fun on other pages too!</a></p>
+			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://erkie.github.com/asteroids.min.js';void(0);">Drag this bookmarklet to your bookmarks bar or a tab and start having some fun on other pages too!</a></p>
 			
 			<!--[if IE]>
 			<p class="ie-version">Right click the green button and choose "Add to favorites" (yes, it's safe).</p>
 			<![endif]-->
 			
+
+		
 			<iframe id="fb-box" src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FKick-Ass-Destroy-the-web%2F168200253236727&amp;width=292&amp;colorscheme=light&amp;show_faces=false&amp;stream=false&amp;header=false&amp;height=62" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:330px; height:70px;" allowTransparency="true"></iframe>
-			
+		
 			<p style="clear:both"><strong>Tip:</strong> It works great for vaporizing annoying ads. Try it out!</p>
 			
 			<div id="boom">
@@ -127,23 +151,29 @@
 				body #doit { background-image: url(button-ie.png); }
 			</style>
 			<![endif]-->
+
+
+			h3>Wanna help?</h3>
 			
-			<h2>About me</h2>
+			<p>Please check the source at <a href="http://github.com/arduinoboy/arduinoboy.github.com">github.com//arduinoboy/arduinoboy.github.com</a>.</p>
+
+			<p>This is a modified version of erkie's that has NO swearing!</p>
 			
-			<p>My name is Erik Rothoff Andersson (most of the time I'm Erik Andersson, but it is such a common name in Sweden that the email adress erik.andersson@gmail.com was taken before I get could it). I am 18 years of age and currently live and study in Sweden.</p>
+			<p>Well, there might be but then just point me to where that is(Using the isuses)</p>
+
+
 			
-			<p>If you feel like contacting me: <a href="mailto:erik.rothoff@gmail.com">erik.rothoff@gmail.com</a> or you can go to the <a href="http://github.com/erkie/erkie.github.com">github page.</a> Feel free to do whatever you want with this app. But remember you saw it first here!</p>
+			<h2>About me(Original)</h2>
 			
-			<h3>Thanks to:</h3>
+			<p>My name is <a href="http://erikrothoff.com/">Erik Rothoff Andersson</a>. I am 18 years of age and currently live in Sweden.</p>
 			
-			<p>I would like to thank the wonderful community members who have contributed to the improvement of this app.</p>
+			<p>I have a company with my brother: <a href="http://rootof.com/">Rootof Creations</a>. We're a digital production company. If you have any creative ideas that need to be coded (or designed), we'd love to help.</p>
 			
-			<ul>
-				<li><a href="http://github.com/voxwerk">Josh Varner (Voxwerk)</a></li>
-				<li><a href="http://github.com/jswartwood">jswartwood</a></li>
-				<li><a href="http://github.com/camperdave">Dave Lee (camperdave)</a></li>
-				<li><a href="http://github.com/TheBiggerGuy">Guy Taylor (TheBiggerGuy)</a></li>
-			</ul>
+			<p>Or if you feel like talking to me: <a href="mailto:erik.rothoff@gmail.com">erik.rothoff@gmail.com</a>. Do you want this, or something similar, on your site? Let's talk!</p>
+			
+			<h3>Wanna help?</h3>
+			
+			<p>Please check the source at <a href="http://github.com/erkie/erkie.github.com">github.com/erkie/erkie.github.com</a>.</p>
 			
 			<script type="text/javascript">
 				var _gaq = _gaq || [];
