Index.html rewrite

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 			<![endif]-->
 			
 			
+			<p>This is a fork of erkie's project(erkie.github.com) mashed with clawfire's version and ALL the swearing taken out. Well.. maybe not all of it. If you see any fix it or report it in the bug tracker.</p>
+
 			<p style="clear:both"><strong>Tip:</strong> It works great for vaporizing annoying ads. Try it out!</p>
 			
 			<div id="boom">
@@ -127,21 +129,17 @@
 			</style>
 			<![endif]-->
 			
-			<h2>About me</h2>
 			
-			<p>My name is Erik Rothoff Andersson (most of the time I'm Erik Andersson, but it is such a common name in Sweden that the email adress erik.andersson@gmail.com was taken before I get could it). I am 18 years of age and currently live and study in Sweden.</p>
-			
-			<p>If you feel like contacting me: <a href="mailto:erik.rothoff@gmail.com">erik.rothoff@gmail.com</a> or you can go to the <a href="http://github.com/erkie/erkie.github.com">github page.</a> Feel free to do whatever you want with this app. But remember you saw it first here!</p>
-			
-			<h3>Thanks to:</h3>
-			
-			<p>I would like to thank the wonderful community members who have contributed to the improvement of this app.</p>
+
+			<p>I would like to thank the wonderful community members who have contributed to this app.</p>
 			
 			<ul>
+				<li><a href="http://github.com/arduinoboy/arduinoboy.github.com">Github page</a></li>
 				<li><a href="http://github.com/voxwerk">Josh Varner (Voxwerk)</a></li>
 				<li><a href="http://github.com/jswartwood">jswartwood</a></li>
 				<li><a href="http://github.com/camperdave">Dave Lee (camperdave)</a></li>
 				<li><a href="http://github.com/TheBiggerGuy">Guy Taylor (TheBiggerGuy)</a></li>
+				<li><a href="http://github.com/erkie/erkie.github.com">Original (erkie)</a></li>
 			</ul>
 			
 			<script type="text/javascript">
